--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<style>
+    <!--Define el estilo--><style>
     .Enca{
         background-color: rgb(14, 182, 14);
     }
@@ -40,7 +40,7 @@
         background-color: rgb(228, 199, 227);
     }
 </style>
-<body>
+<body> <!--Define el cuerpo-->
     <!--Hacer una tabla-->
     <table border="1"><!--Define una tabla-->
         <thead><!--Encabezado-->
@@ -51,57 +51,57 @@
           </thead>  
           
         <tbody><!--Datos-->
-          <tr>
-          <th></th>
-          <th>Dilluns</th>
-          <th>Dimarts</th>
-          <th>Dimecres</th>
-          <th>Dijous</th>
-          <th>Divendres</th>
+          <tr><!--Define una fila-->
+          <th></th><!--Define columnas-->
+          <th>Dilluns</th><!--Define columnas-->
+          <th>Dimarts</th><!--Define columnas-->
+          <th>Dimecres</th><!--Define columnas-->
+          <th>Dijous</th><!--Define columnas-->
+          <th>Divendres</th><!--Define columnas-->
           </tr>
 
-          <tr>
-            <td>8:00<br>8:55</td>
-            <td rowspan="2"></td>
-             <td class="Ipos">1709 IPO01  301<BR>Miguel   ASIX1</td>
-                 <td class="tuto">TUTORIA    301<BR>Gerard   ASIX1</td>
-                    <td></td>
-                  <td class="Ipos">1709 IPO01  301<BR>Miguel   ASIX1</td>
+          <tr><!--Define una fila-->
+            <td>8:00<br>8:55</td><!--Define columnas-->
+            <td rowspan="2"></td><!--Define columnas-->
+             <td class="Ipos">1709 IPO01  301<BR>Miguel   ASIX1</td><!--Define columnas-->
+                 <td class="tuto">TUTORIA    301<BR>Gerard   ASIX1</td><!--Define columnas-->
+                    <td></td><!--Define columnas-->
+                  <td class="Ipos">1709 IPO01  301<BR>Miguel   ASIX1</td><!--Define columnas-->
                         
           </tr>
 
-          <tr>
-            <td>8.55<br>9:50</td>
-            <td class="xarxes" rowspan="2">Xarxes  301<br>Nuri/Gerard  ASIX1</td>
-             <td class="sistemas" rowspan="2">0369 Imp.SO    301<br>S.Velasco/Alejandro</td>
-              <td class="Ipos" rowspan="2">1710 IPO2  301<br>Miguel</td>
-               <td  class="ingles">0179 Anglès  301</s><br>Alex</td>
+          <tr><!--Define una fila-->
+            <td>8.55<br>9:50</td><!--Define columnas-->
+            <td class="xarxes" rowspan="2">Xarxes  301<br>Nuri/Gerard  ASIX1</td><!--Define columnas-->
+             <td class="sistemas" rowspan="2">0369 Imp.SO    301<br>S.Velasco/Alejandro</td><!--Define columnas-->
+              <td class="Ipos" rowspan="2">1710 IPO2  301<br>Miguel</td><!--Define columnas-->
+               <td  class="ingles">0179 Anglès  301</s><br>Alex</td><!--Define columnas-->
           </tr>
 
-          <tr>
-            <td>9:50<br>10:45</td>
-            <td class="Ipos">1709 IPO01  301<BR>Miguel   ASIX1</td>
-                <td class="sistemas" rowspan="2">0369 Imp.SO    301<br>S.Velasco/Alejandro</td>
+          <tr><!--Define una fila-->
+            <td>9:50<br>10:45</td><!--Define columnas-->
+            <td class="Ipos">1709 IPO01  301<BR>Miguel   ASIX1</td><!--Define columnas-->
+                <td class="sistemas" rowspan="2">0369 Imp.SO    301<br>S.Velasco/Alejandro</td><!--Define columnas-->
           </tr>
 
-          <tr>
-            <td>11:15<br>12:10</td>
-             <td class="base" rowspan="2">0379 Ad.Sis.G.BD Agnés  301</td>
-             <td class="Pro" rowspan="3">OP202 Prog.    301<br>Fatima/Alejandro     ASIX1</td>
-            <td class="base" rowspan="3">OP202 Gest.BBDD.    301<br>Anglès/Alejandro     ASIX1</td>
-            <td class="ingles">0179 Anglès  301</s><br>Alex</td>
+          <tr><!--Define una fila-->
+            <td>11:15<br>12:10</td><!--Define columnas-->
+             <td class="base" rowspan="2">0379 Ad.Sis.G.BD Agnés  301</td><!--Define columnas-->
+             <td class="Pro" rowspan="3">OP202 Prog.    301<br>Fatima/Alejandro     ASIX1</td><!--Define columnas-->
+            <td class="base" rowspan="3">OP202 Gest.BBDD.    301<br>Anglès/Alejandro     ASIX1</td><!--Define columnas-->
+            <td class="ingles">0179 Anglès  301</s><br>Alex</td><!--Define columnas-->
 
           </tr>
 
-          <tr>
-            <td>12:10<br>13:05</td>
-            <td class="lengua" rowspan="2">0373 Lleng. Marques 301 Alberto</td>
-            <td class="web" rowspan="2">0376 Imp.Apl.Web    301<br>Alberto/Alejandro</td>
+          <tr><!--Define una fila-->
+            <td>12:10<br>13:05</td><!--Define columnas-->
+            <td class="lengua" rowspan="2">0373 Lleng. Marques 301 Alberto</td><!--Define columnas-->
+            <td class="web" rowspan="2">0376 Imp.Apl.Web    301<br>Alberto/Alejandro</td><!--Define columnas-->
           </tr>
 
-          <tr>
-            <td>13:05<br>14:00</td>
-            <td class="digi">1665 Digit. 301<br>Alberto  ASIX1</td>
+          <tr><!--Define una fila-->
+            <td>13:05<br>14:00</td><!--Define columnas-->
+            <td class="digi">1665 Digit. 301<br>Alberto  ASIX1</td><!--Define columnas-->
           </tr>
 
         </tbody>
